[package]
name = "mouse-control"
version = "0.1.0"
authors = ["Matthew Scott Conroy <matthewscottconroy@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bracket-lib = "~0.8.1"
#bracket-pathfinding = "~0.8.7"
#bracket-random = "~0.8.7"
bracket-terminal = "~0.8.7"

